# undergraduate-coding

./: .gitignore  license.md  pyproject.toml  readme.md
MachineLearning/: decision_tree.ipynb
OOP/: ArrayAdditionAndPrint.cpp  BinarySearch.cpp  SortingAlgorithims.cpp  TicketSystem.cpp  TimeObjectClass.cpp
assets/: students.txt
cpp/: 4calif.cpp  55calif.cpp  6calif.cpp  PCprob1.cpp  PCprob2.cpp  PCprob3.cpp  PCprob4.cpp  PROBLEMA1.cpp  PROBLEMA2.cpp  PROBLEMA3.cpp  PROBLEMA4.cpp  Parcial1.cpp  Parcial3.cpp  Parcial4.cpp  Sergio_Gastulo_P2.cpp  awa.cpp  dowhile.cpp  ejemplo1.cpp  ejemplo2.cpp  ejemplo3.cpp  ejemplo4.cpp  ejemplo5.cpp  for.cpp  if.cpp  primos.cpp  string1.cpp  string10.cpp  string2.cpp  string3.cpp  string4.cpp  string5.cpp  string6.cpp  string7.cpp  string7_1.cpp  string8.cpp  string9.cpp  switch.cpp  test.cpp  vector1.cpp  vector2.cpp  (+7 more)
cpp_v/: BMICalculator.cpp  ComplexNumbersClass.cpp  MatrixPrettyPrint.cpp  MuseumClass.cpp  PearsonClass.cpp  ShowPrimes.cpp
legacy/: Alumno2.ipynb  Cubic_Spline.ipynb  Decision_tree.py  FINAL2_3.cpp  INTEGRATION.ipynb  MEF_Global.ipynb  MEF_Local.ipynb  Método_Implícito_Trapezoidal.ipynb  ODE_corregir_la_matriz_al_imponer_condiciones_iniciales.ipynb  PC4-num.ipynb  Parcial2.cpp  Parcial2_2.cpp  Spline.ipynb  x.ipynb
py/: Bezier_Newton_y_Chebyshev_poly.ipynb  Colocación_y_Garleking.ipynb  FFT.ipynb  MEF_Poisson.ipynb  PRUEBA.ipynb  disparo_lineal_no_lineal_con_newton_y_regla_falsa.ipynb
py_v/: crank_nicolson_heat_eq.ipynb  decision_tree.ipynb  finite_difference_heat_eq.ipynb  runge_kutta.ipynb  (+1 more)
utils/: stats.py  (+5 more)
(+31 files in other folders)
